--- a/src/styles/components/_project-detail.scss
+++ b/src/styles/components/_project-detail.scss
@@ -11,7 +11,6 @@
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
   margin: auto;
   transition: all 0.25s ease;
   overflow: auto;
